--- a/PAGINAWEB/index.html
+++ b/PAGINAWEB/index.html
@@ -13,14 +13,6 @@
     <link href="css/styles.css" rel="stylesheet" />
     <!-- Google CDN JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-
-    <style>
-      @media (min-width: 990px) {
-        .infoPersonal {
-          margin-left: 48px;
-        }
-      }
-    </style>
   </head>
   <body>
     <div class="item" data-aos="fade-right">3</div>
@@ -80,7 +72,7 @@
               <li class="form-academica">2020 - Telefonía Celular</li>
             </ul>
 
-            <h3 class="mt-2" >Habilidades</h3>
+            <h3 class="mt-2">Habilidades</h3>
             <div class="container p-0" id="Habilidades">
               <ul>
                 <li>HTML</li>
@@ -98,13 +90,13 @@
                 <li>CSS</li>
                 <div class="progress">
                   <div
-                  id="barraCSS"
+                    id="barraCSS"
                     class="progress-bar progress-bar-striped progress-bar-animated inicio animacion"
                     role="progressbar"
                     aria-valuenow="75"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="background-color: aquamarine;"
+                    style="background-color: aquamarine"
                   ></div>
                 </div>
                 <li>JavaScript</li>
@@ -128,24 +120,23 @@
                     aria-valuenow="75"
                     aria-valuemin="0"
                     aria-valuemax="100"
-                    style="background-color: aquamarine;"
+                    style="background-color: aquamarine"
                   ></div>
                 </div>
               </ul>
             </div>
-            <h3 class="mt-2"onclick="Competencias_click()" id="circle">Competencias</h3>
+            <h3 class="mt-2" onclick="Competencias_click()" id="circle">
+              Competencias
+            </h3>
             <div class="container p-0" id="Competencias">
-                <ul>
-                    <li class="competencias">Ingles</li>
-                    <li class="competencias">Paquete Office</li>
-                    <li class="competencias">
-                      Configuracion/Optimizacion de Windows
-                    </li>
-                  </ul>
+              <ul>
+                <li class="competencias">Ingles</li>
+                <li class="competencias">Paquete Office</li>
+                <li class="competencias">
+                  Configuracion/Optimizacion de Windows
+                </li>
+              </ul>
             </div>
-            
-
-            
           </div>
         </div>
 
